[gd_scene load_steps=6 format=3 uid="uid://d0wl53hsyfl8g"]

[ext_resource type="Script" uid="uid://dn3fkdp1t71m6" path="res://src/game/ui/menus/pause_menu/PauseMenu.gd" id="1"]
[ext_resource type="Theme" uid="uid://btc130konr2b" path="res://assets/themes/MyTheme.tres" id="2_mkjft"]
[ext_resource type="Texture2D" uid="uid://b13jdpjo1ctay" path="res://assets/textures/images/wallpaper_nofocus.png" id="3_uqaoq"]
[ext_resource type="FontFile" uid="uid://i1qus13x2d0u" path="res://assets/fonts/Roboto-Bold.ttf" id="4_ncook"]
[ext_resource type="PackedScene" uid="uid://m012tphmbg3w" path="res://src/game/ui/menus/options_menu/options_menu.tscn" id="4_rabgt"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1")

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_mkjft")

[node name="TextureRect" type="TextureRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.999998
offset_top = -2.0000038
offset_right = 1950.9998
offset_bottom = 1194.9999
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_uqaoq")

[node name="Label" type="Label" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.5
offset_right = 73.5
offset_bottom = 119.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_ncook")
theme_override_font_sizes/font_size = 48
text = "Pausa
"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -59.5
offset_right = 107.0
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_mkjft")
theme_override_fonts/font = ExtResource("4_ncook")
text = "Atras"

[node name="OptionsButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Opciones"

[node name="ReturnButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="OptionsMenu" parent="." instance=ExtResource("4_rabgt")]

[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
